# Actix-Web-React-Fullstack

./: .gitignore  README.md  clear.sh  docker-compose.yaml  package-lock.json
actix_api/: $.env
actix_api/migrations/2022-11-22-180246_create_users/: down.sql  up.sql
actix_api/migrations/2023-02-07-211234_adding_published_profile_field/: up.sql
actix_api/migrations/2023-02-20-195352_adding_user_uuid/: up.sql
actix_api/migrations/2023-03-09-225238_add_unique_id_auth0/: up.sql
actix_api/migrations/2023-03-10-031004_make_not_null/: up.sql
actix_api/src/: claims.rs  handlers.rs  main.rs  schema.rs
backend/: Cargo.toml  Dockerfile  run.sh
backend/migrations/2023-04-20-143435_create_user_table/: up.sql
backend/src/: main.rs  models.rs  schema.rs  types.rs
front_end/: package-lock.json
front_end/src/: app.js  index.js
front_end/src/actions/: userActions.js
front_end/src/components/: AdminApprovalUserList.js  admin-approval-user.js  featured-users-hero-image.js  hero-banner.js  page-footer.js
front_end/src/components/forms/: create-user-form.js  update-user-form.js
front_end/src/pages/: admin-page.js  detail-user-page.js  profile-page.js  results-page.js  user-dashboard.js
front_end/src/styles/: general.css
frontend/: $.env  Dockerfile  package.json
frontend/public/: index.html
frontend/src/: app.js  store.js
frontend/src/components/: SearchBar.js  detailed-user.js  search-results.js
frontend/src/pages/: admin-approval.js  detail-user-page.js  home-page.js  user-dashboard.js
frontend/src/services/: backend-api.service.js
(+16 files in other folders)
