[package]
name = "actix_web_crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.47"
actix-web = { version = "4.3.1", features = ["rustls"] }
actix-rt = "2.5.0"
awc = { version = "3.1.1", features = ["rustls"] }
actix-web-httpauth = "0.6.0"
jsonwebtoken = "8.3.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
envy = "0.4.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
actix-cors = "0.6.1"
derive_more = "0.99.17"
time = "0.3.20"


[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]